# sufferingv2

./: .gitignore  Cargo.toml  Dockerfile  README.md  schema.prisma
.cargo/: config.toml
migrations/2022-04-22-231021_users/: up.sql
migrations/2022-04-24-005645_nouns/: down.sql  up.sql
src/: auth.rs  errors.rs  lib.rs  main.rs  models.rs  prisma.rs  routes.rs  schema.rs
src/models/: nouns.rs  users.rs
src/routes/: nouns.rs  users.rs
