[package]
name = "latin-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "prisma-cli"
]

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.6"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.11"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
argon2 = "0.4"
rand_core = {version = "0.6", features = ["std"]}
jwt-simple = "0.10"
lazy_static = "1.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.4.0" }
